# libint

./: .gitignore  CMakeLists.txt  meson.build
.github/workflows/: main.yml
include/: CMakeLists.txt  libint.h
src/: CMakeLists.txt  libint_internal.h  libint_signed.c  libint_unsigned.c  libint_utils.c  libint_utils.h
test-unit/: CMakeLists.txt  main.c
